<resources>
    <string name="app_name">Orca</string>

    <string name="no_network_check_connection">No network. Please, check your connection</string>

    <!-- Strings related to navigation drawer -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_learning_title">Learning</string>
    <string name="nav_settings_title">Settings</string>

    <!-- Nav drawer -->
    <string name="nav_header_week_number">Week: %d</string>
    <string name="nav_header_student_name">%1$s %2$s</string>
    <string name="examination_period">Examination period</string>
    <string name="holiday_period">Holidays</string>
    <string name="first_week_of_month">1\'st week</string>
    <string name="second_week_of_month">2\'nd week</string>
    <string name="third_week_of_month">3\'rd week</string>
    <string name="fourth_week_of_month">4\'th week</string>

    <string name="network_error_occurred">Network error occurred. Check your connection</string>

    <!-- Strings related to log in activity -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="login_cannot_be_empty_string">Login cannot be empty string</string>
    <string name="password_cannot_be_empty_string">Password cannot be empty string</string>
    <string name="signing_in">Signing in</string>
    <string name="login_or_password_incorrect">Login or password incorrect</string>

    <!-- Strings related to learning activity -->
    <string name="reenter_login_and_password">Re-enter</string>
    <string name="no_user_signed_in">No user signed in</string>
    <string name="points_not_entered_value">-</string>

    <!-- Strings related to schedule activity -->
    <string name="nav_schedule_title">Schedule</string>
    <string name="retry">Retry</string>
    <string name="select_group">Select group</string>
    <string name="no_group_selected_error">No group selected. Please, select it</string>
    <string name="could_not_load_groups_error">Could not load groups</string>
    <string name="could_not_load_schedule_for_group_error">Could not load schedule for %1$s group</string>
    <string name="could_not_parse_response">An error occurred while parsing the response</string>
    <string name="no_lesson">No lesson</string>

    <!-- Strings related to discipline details activity -->
    <string name="control_event_points_range_str_fmt">%1$s - %2$s</string>
    <string name="control_event_week_type_str_fmt">%1$d. %2$s</string>
    <string name="control_event_not_attended">N/A</string>

    <!-- Strings related to notifications -->
    <string name="notification_new_points_content">%1$d. %2$s: %3$f(%4$f)</string>

    <!-- Strings related to preferences -->
    <string name="prefs_appearance">Appearance</string>
    <string name="prefs_start_activity_key">start_activity</string>
    <string name="prefs_start_activity_title">Open when app launched</string>
    <string name="prefs_start_activity_dialog_title">Choose a section to open when app launched</string>
    <string-array name="prefs_start_activity_entries">
        <item>@string/nav_learning_title</item>
        <item>@string/nav_schedule_title</item>
    </string-array>
    <string-array name="prefs_start_activity_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="prefs_start_activity_default_value">0</string>
    <string name="prefs_updates_title">Updates</string>
    <string name="prefs_orioks_auto_update_title">Enable Orioks auto update</string>
    <string name="prefs_orioks_auto_update_summary">Automatically update info from Orioks in background</string>
    <string name="prefs_orioks_auto_update_key">orioks_auto_update</string>
    <string name="prefs_notifications">Notifications</string>
    <string name="prefs_receive_notifications_about_points_changes">Receive notifications</string>
    <string name="prefs_receive_notifications_about_points_changes_key">receive_notifications</string>
</resources>
