<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefs_appearance">
        <ListPreference
            android:title="@string/prefs_start_activity_title"
            android:dialogTitle="@string/prefs_start_activity_dialog_title"
            android:key="@string/prefs_start_activity_key"
            android:entries="@array/prefs_start_activity_entries"
            android:entryValues="@array/prefs_start_activity_values"
            android:defaultValue="@string/prefs_start_activity_default_value"
            android:summary="%s" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_updates_title">

        <SwitchPreference
            android:title="@string/prefs_orioks_auto_update_title"
            android:summary="@string/prefs_orioks_auto_update_summary"
            android:defaultValue="false"
            android:key="@string/prefs_orioks_auto_update_key" />

        <SwitchPreference
            android:title="@string/prefs_receive_notifications_about_points_changes"
            android:key="@string/prefs_receive_notifications_about_points_changes_key"
            android:dependency="@string/prefs_orioks_auto_update_key"/>
    </PreferenceCategory>
</PreferenceScreen>